Fix text alignment in gallery with showcase left
On the following page (which will now look at it should):
https://exhibitions.cul.columbia.edu/exhibits/show/novelties/sherwinwilliams
The text was to the right of the showcase image, under the
thumbnails. However, the text should be under the showcase image on the
left hand side of the page.

--- a/css/screen.css
+++ b/css/screen.css
@@ -1450,6 +1450,7 @@ body.burgundy {
 .layout-gallery .gallery-text.showcase-left.gallery-right {
   width: 48%;
   float: left;
+  clear: left;
 }
 
 .exhibit-block .exhibit-item-caption {
